bk_ida/gccida/g0/allocate_reload_reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/allocate_reload_reg/src/reload1.c:5654:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[rld[r].mode] == MODE_COMPLEX_INT || mode_class_0[rld[r].mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/allocate_reload_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/allocate_reload_reg/src/reload1.c:5654:60: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[rld[r].mode] == MODE_COMPLEX_INT || mode_class_0[rld[r].mode] == MODE_COMPLEX_FLOAT ) 
                                                           ^~~~~~~~~~~~
                                                           mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/allocate_reload_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/allocate_reload_reg/src/obj/reload1.o] Error 1
